@@ -1,5 +1,15 @@
 2008-06-07  Cameron Zwarich  <cwzwarich@uwaterloo.ca>
 
+        Reviewed by Eric.
+
+        Bug 17548: JavaScriptCore print(a, b) differs from Spidermonkey Behavior
+        <https://bugs.webkit.org/show_bug.cgi?id=17548>
+
+        * kjs/testkjs.cpp:
+        (functionPrint):
+
+2008-06-07  Cameron Zwarich  <cwzwarich@uwaterloo.ca>
+
         Reviewed by Sam.
 
         Bug 17547: JavaScriptCore print() differs from Spidermonkey Behavior
